add hello section

--- a/src/styles/components/HamburgerMenu.scss
+++ b/src/styles/components/HamburgerMenu.scss
@@ -10,7 +10,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50px;
-    background-color: red;
+    background-color: white;
     cursor: pointer;
   }
   &__line--1,
