--- a/src/styles/layouts/Hello.scss
+++ b/src/styles/layouts/Hello.scss
@@ -3,7 +3,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   width: 100%;
   height: 100vh;
   background: linear-gradient(
@@ -13,7 +12,17 @@
     $backgroundColor 50%,
     $backgroundColor 100%
   );
-
+  &__lupe {
+    position: absolute;
+    display: block;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    font-weight: 900;
+    color: black;
+    z-index: 900;
+    top: 2%;
+    left: 6%;
+  }
   &__title {
     position: relative;
     display: blok;
@@ -29,11 +38,18 @@
   }
   &__point {
     position: absolute;
-    width: 15px;
-    height: 15px;
-
+    width: 10px;
+    height: 10px;
     border-radius: 50px;
     background-color: $mainColor;
-    transform: translateY(55px);
+    transform: translate(2px, 10px);
+  }
+
+  &__static-txt {
+    display: block;
+    font-size: 2rem;
+    text-transform: uppercase;
+    font-weight: 900;
+    color: black;
   }
 }
