--- a/src/styles/layouts/Index.scss
+++ b/src/styles/layouts/Index.scss
@@ -31,8 +31,8 @@
     background: linear-gradient(
       to right,
       $backgroundColor 0%,
-      $backgroundColor 94%,
-      $mainColor 94%,
+      $backgroundColor 65%,
+      $mainColor 65%,
       $mainColor 100%
     );
   }
@@ -40,9 +40,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    flex-direction: column;
     width: 75%;
     height: 100vh;
+    @media all and (min-width: 1440px) {
+      width: 65%;
+    }
   }
 
   &__items {
@@ -53,15 +56,14 @@
     li {
       margin-bottom: 10px;
     }
-
-    li:hover {
-      text-decoration: line-through;
-      text-decoration-color: rgba(255, 87, 81, 0.6);
-      text-decoration-thickness: 12px;
-    }
   }
   &__link {
     text-decoration: none;
     color: black;
+    &:hover {
+      text-decoration: line-through;
+      text-decoration-color: rgba(255, 87, 81, 0.6);
+      text-decoration-thickness: 22px;
+    }
   }
 }
