--- a/src/styles/layouts/Hello.scss
+++ b/src/styles/layouts/Hello.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  min-width: 320px;
   height: 100vh;
   background: linear-gradient(
     to right,
