update about font-size

--- a/src/styles/layouts/About.scss
+++ b/src/styles/layouts/About.scss
@@ -1,7 +1,7 @@
 @import "../core/variables.scss";
 .about {
   width: 100%;
-  min-width: 320px;
+  /* min-width: 320px; */
   height: auto;
   &__hero {
     display: flex;
@@ -31,9 +31,9 @@
     font-weight: 900;
   }
   &__text {
-    font-size: 1.2rem;
+    font-size: clamp(1.2rem, 4vw, 2.5rem);
     text-align: justify;
-    padding: 15%;
+    padding: 0 15%;
   }
   &__text--strong {
     margin-top: 40px;
@@ -43,6 +43,9 @@
     line-height: normal;
   }
   &__bio {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
     padding: 15% 0;
   }
   &__image {
