--- a/src/styles/components/ProjectsCard.scss
+++ b/src/styles/components/ProjectsCard.scss
@@ -4,51 +4,42 @@
     background-color:var(--secundary-color);
   } */
 .projectCard {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap; /* se alinean en filas */
-}
-&__img {
-  width: 24%;
-  height: 8.8rem;
-  margin-bottom: 1rem;
-  overflow: hidden;
-  position: relative;
-  cursor: pointer;
-  box-shadow: 0 0 0.6rem 0 rgb(0, 0, 0, 0.5);
-}
-&__img img {
-  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(autofit, minmax(15rem, 1fr));
 
-  object-fit: cover;
-  display: block;
-}
-&__hover {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  transform: scale(0);
-  background-color: var(--primary-color);
+  &__img {
+    cursor: pointer;
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
 
-  transition: transform 0.5s;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column; /* pone el logo y el parrafo en columna, uno sobre otro */
-}
-&__hover a {
-  width: 20%;
-  height: auto;
-  margin-bottom: 0.6rem;
-}
-&__hover p {
-  color: white;
-  font-size: 0.8rem;
-}
-&__hover:hover {
-  transform: scale(1);
-}
-.hidden {
-  display: none;
+    display: block;
+  }
+  &__hover {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    transform: scale(0);
+    background-color: $mainColor;
+
+    transition: transform 0.5s;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; /* pone el logo y el parrafo en columna, uno sobre otro */
+  }
+  &__hover a {
+    width: 20%;
+    height: auto;
+    margin-bottom: 0.6rem;
+  }
+  &__hover p {
+    color: white;
+    font-size: 0.8rem;
+  }
+  &__hover:hover {
+    display: block;
+    transform: scale(1);
+  }
 }
