add hover effect over proyects

--- a/src/styles/layouts/Projects.scss
+++ b/src/styles/layouts/Projects.scss
@@ -1,4 +1,11 @@
-.projects__list {
-  display: grid;
-  grid-template-columns: repeat(autofit, minmax(15rem, 1fr));
+.projects {
+  &__container {
+    width: 100%;
+    height: auto;
+  }
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    list-style: none;
+  }
 }
