--- a/src/styles/components/ProjectsCard.scss
+++ b/src/styles/components/ProjectsCard.scss
@@ -4,42 +4,45 @@
     background-color:var(--secundary-color);
   } */
 .projectCard {
-  display: grid;
-  grid-template-columns: repeat(autofit, minmax(15rem, 1fr));
-
-  &__img {
-    cursor: pointer;
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-
-    display: block;
+  &__container {
+    position: relative;
+    width: auto;
   }
-  &__hover {
+  &__img {
+    display: block;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    cursor: pointer;
+  }
+  &__overlay {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    top: 0;
-    transform: scale(0);
-    background-color: $mainColor;
-
-    transition: transform 0.5s;
-    display: none;
+    background-color: rgba(255, 88, 81, 0.4);
+    display: flex;
+    color: white;
     justify-content: center;
     align-items: center;
-    flex-direction: column; /* pone el logo y el parrafo en columna, uno sobre otro */
+    gap: 3em;
+    opacity: 0;
+    transition: opacity 0.95s;
+    &:hover {
+      opacity: 1;
+    }
+
+    a {
+      color: white;
+    }
   }
-  &__hover a {
-    width: 20%;
-    height: auto;
-    margin-bottom: 0.6rem;
+  &__overlay > * {
+    transform: translateY(20px);
+    transition: transform 0.55s;
   }
-  &__hover p {
-    color: white;
-    font-size: 0.8rem;
-  }
-  &__hover:hover {
-    display: block;
-    transform: scale(1);
+  &__overlay:hover > * {
+    transform: translateY(0px);
+    /*  transition: transform 0.25s; */
   }
 }
