--- a/src/styles/components/HamburgerMenu.scss
+++ b/src/styles/components/HamburgerMenu.scss
@@ -12,6 +12,7 @@
     border-radius: 50px;
     background-color: white;
     cursor: pointer;
+    z-index: 9999;
   }
   &__line--1,
   &__line--2,
