--- a/src/styles/layouts/About.scss
+++ b/src/styles/layouts/About.scss
@@ -31,11 +31,11 @@
     color: $mainColor;
     margin-bottom: 25px;
   }
-  &__line {
+  /*   &__line {
     text-decoration: overline;
     text-decoration-color: rgba(255, 87, 81, 0.6);
     text-decoration-thickness: 10px;
     margin-bottom: 25px;
     word-spacing: 10px;
-  }
+  } */
 }
