--- a/src/styles/layouts/Projects.scss
+++ b/src/styles/layouts/Projects.scss
@@ -1,4 +1,8 @@
+@import "../core/variables.scss";
 .projects {
+  width: 100%;
+  height: auto;
+
   &__container {
     width: 100%;
     height: auto;
