--- a/src/styles/components/NavBar.scss
+++ b/src/styles/components/NavBar.scss
@@ -1,5 +1,8 @@
 @import "../core/variables.scss";
 .index {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100vh;
   background: linear-gradient(
@@ -9,6 +12,7 @@
     $mainColor 15%,
     $mainColor 100%
   );
+  z-index: 900;
 
   animation: slide-in 0.8s linear 0.2s both;
 
@@ -65,7 +69,7 @@
     color: black;
     &:hover {
       text-decoration: line-through;
-      text-decoration-color: rgba(255, 87, 81, 0.6);
+      text-decoration-color: rgba(255, 255, 255, 0.6);
       text-decoration-thickness: 22px;
     }
   }
@@ -81,3 +85,15 @@
 .hidden {
   display: none;
 }
+/* .slide-out {
+  animation: slide-out 0.8s linear 0.2s both;
+}
+
+@keyframes slide-out {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+} */
