--- a/src/styles/layouts/Contact.scss
+++ b/src/styles/layouts/Contact.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     width: 100%;
     height: 100vh;
-    padding: 0 40px;
+    padding: 0 10%;
     line-height: 80px;
     background: linear-gradient(
       to bottom,
@@ -27,10 +27,23 @@
     overflow-wrap: anywhere;
     font-size: clamp(7.8rem, 20vw, 22rem);
     font-weight: 900;
+    /*     padding-left: 5%; */
+    @media all and (min-width: 768px) {
+      width: 440px;
+      line-height: 120px;
+    }
+    @media all and (min-width: 1024px) {
+      width: 700px;
+      line-height: 170px;
+    }
+    @media all and (min-width: 1440px) {
+      width: 700px;
+      line-height: 180px;
+    }
   }
   &__text {
-    margin-top: 50px;
-    font-size: 1.6rem;
+    margin-top: 15%;
+    font-size: clamp(1.6rem, 1.2vw, 2.4rem);
     color: #f8f8f8;
     font-weight: bold;
     line-height: normal;
