--- a/src/styles/layouts/About.scss
+++ b/src/styles/layouts/About.scss
@@ -1,41 +1,58 @@
 @import "../core/variables.scss";
 .about {
   width: 100%;
-  /* min-width: 320px; */
   height: auto;
 
   &__text {
-    font-size: clamp(1.2rem, 4vw, 2.5rem);
+    font-size: clamp(1.2rem, 2.8vw, 2.5rem);
     text-align: justify;
-    padding: 0 15% 10%;
+    padding: 10% 15%;
+    span {
+      display: block;
+      font-size: 0;
+      margin-top: 10px;
+    }
+    @media all and (min-width: 1440px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 0 25%;
+    }
   }
 
   &__bio {
     display: grid;
     gap: 1rem;
     grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
-    padding: 15% 0;
+    /*     padding: 15% 0; */
   }
   &__image {
     width: 100%;
     height: auto;
     object-fit: cover;
     filter: grayscale(100%);
+    @media all and (min-width: 1440px) {
+      height: 700px;
+      object-fit: cover;
+    }
   }
 }
 .skills {
-  padding: 15%;
+  padding: 10% 15%;
+  height: auto;
 
   &__title {
-    font-size: 2.5rem;
+    font-size: clamp(2.5rem, 4vw, 4.5rem);
     color: $mainColor;
     margin-bottom: 25px;
   }
-  /*   &__line {
+  &__line {
     text-decoration: overline;
     text-decoration-color: rgba(255, 87, 81, 0.6);
-    text-decoration-thickness: 10px;
+    text-decoration-thickness: 6px;
     margin-bottom: 25px;
     word-spacing: 10px;
-  } */
+    font-size: clamp(1.2rem, 4vw, 2.5rem);
+  }
 }
