--- a/src/styles/layouts/Hello.scss
+++ b/src/styles/layouts/Hello.scss
@@ -13,6 +13,15 @@
     $backgroundColor 50%,
     $backgroundColor 100%
   );
+  animation: slide-in 0.8s linear 0.2s both;
+  @keyframes slide-in {
+    from {
+      transform: translateX(100%);
+    }
+    to {
+      transform: translateX(0%);
+    }
+  }
   &__dynamic-text {
     position: absolute;
     display: block;
