--- a/src/styles/layouts/Projects.scss
+++ b/src/styles/layouts/Projects.scss
@@ -2,6 +2,16 @@
 .projects {
   width: 100%;
   height: auto;
+  background-color: $backgroundColor;
+  animation: slide-in 0.8s linear 0.2s both;
+  @keyframes slide-in {
+    from {
+      transform: translateX(100%);
+    }
+    to {
+      transform: translateX(0%);
+    }
+  }
 
   &__container {
     width: 100%;
