--- a/src/styles/layouts/Contact.scss
+++ b/src/styles/layouts/Contact.scss
@@ -2,6 +2,15 @@
 .contact {
   width: 100%;
   height: 100vh;
+  animation: slide-in 0.8s linear 0.2s both;
+  @keyframes slide-in {
+    from {
+      transform: translateX(-100%);
+    }
+    to {
+      transform: translateX(0%);
+    }
+  }
 
   &__hero {
     display: flex;
