--- a/src/styles/components/NavContact.scss
+++ b/src/styles/components/NavContact.scss
@@ -32,7 +32,7 @@
   top: -80px;
   left: 0;
   background: #000;
-  background: $mainColor;
+  background: $backgroundColor;
   position: absolute;
   transition: 0.5s;
 }
