--- a/src/styles/layouts/Contact.scss
+++ b/src/styles/layouts/Contact.scss
@@ -2,10 +2,10 @@
 .contact {
   width: 100%;
   height: 100vh;
-  animation: slide-in 0.8s linear 0.2s both;
-  @keyframes slide-in {
+  animation: slide-right 0.8s linear 0.2s both;
+  @keyframes slide-right {
     from {
-      transform: translateX(-100%);
+      transform: translateX(100%);
     }
     to {
       transform: translateX(0%);
@@ -51,6 +51,14 @@
     @media all and (min-width: 1440px) {
       width: 700px;
       line-height: 180px;
+    }
+  }
+  &__container {
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    @media all and (min-width: 1440px) {
+      margin-top: 80px;
     }
   }
   &__text {
