--- a/src/styles/layouts/Contact.scss
+++ b/src/styles/layouts/Contact.scss
@@ -39,7 +39,6 @@
     overflow-wrap: anywhere;
     font-size: clamp(7.8rem, 15vw, 22rem);
     font-weight: 900;
-    /*     padding-left: 5%; */
     @media all and (min-width: 768px) {
       width: 440px;
       line-height: 120px;
@@ -67,5 +66,6 @@
     font-weight: bold;
     line-height: normal;
     text-align: right;
+    margin-top: 12rem;
   }
 }
