--- a/src/styles/layouts/Contact.scss
+++ b/src/styles/layouts/Contact.scss
@@ -2,7 +2,7 @@
 .contact {
   width: 100%;
   height: 100vh;
-  animation: slide-right 0.8s linear 0.2s both;
+  /*   animation: slide-right 0.8s linear 0.2s both;
   @keyframes slide-right {
     from {
       transform: translateX(100%);
@@ -10,7 +10,7 @@
     to {
       transform: translateX(0%);
     }
-  }
+  } */
 
   &__hero {
     display: flex;
