--- a/src/styles/components/NavBar.scss
+++ b/src/styles/components/NavBar.scss
@@ -1,8 +1,8 @@
 @import "../core/variables.scss";
 .index {
   position: fixed;
-  width: 100%;
-  height: 100vh;
+  width: 40%;
+  height: auto;
   background: linear-gradient(
     to right,
     $backgroundColor 0%,
@@ -10,8 +10,7 @@
     $mainColor 15%,
     $mainColor 100%
   );
-  z-index: 900;
-
+  z-index: 600;
   /*   animation: slide-in 0.8s linear 0.2s both; */
 
   /*   @media all and (min-width: 768px) {
