--- a/src/styles/components/HamburgerMenu.scss
+++ b/src/styles/components/HamburgerMenu.scss
@@ -40,8 +40,8 @@
 }
 .index {
   position: fixed;
-  width: 40%;
-  height: auto;
+  width: 100%;
+  height: 100vh;
   background: linear-gradient(
     to right,
     $backgroundColor 0%,
