--- a/src/styles/components/HamburgerMenu.scss
+++ b/src/styles/components/HamburgerMenu.scss
@@ -42,13 +42,7 @@
   position: fixed;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(
-    to right,
-    $backgroundColor 0%,
-    $backgroundColor 15%,
-    $mainColor 15%,
-    $mainColor 100%
-  );
+  background-color: $mainColor;
   z-index: 600;
 
   &__container {
@@ -68,6 +62,7 @@
     font-size: clamp(2rem, 5vw, 4rem);
     font-weight: bold;
     text-transform: capitalize;
+
     li {
       margin-bottom: 10px;
     }
@@ -75,6 +70,7 @@
   &__link {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.409);
+
     &:hover {
       color: black;
     }
