update hero title width

--- a/src/styles/core/variables.scss
+++ b/src/styles/core/variables.scss
@@ -24,7 +24,7 @@ body {
 .section__title {
   text-transform: uppercase;
   letter-spacing: -0.5px;
-  width: 250px;
+  width: 4ch;
   height: auto;
   overflow-wrap: anywhere;
   font-size: clamp(7.8rem, 15vw, 22rem);
